# 2DEngine

./: .gitignore  CMakeLists.txt  HowToSetup.txt  package-lock.json  requirements.txt  setup.py
Core/: CMakeLists.txt
Core/include/: Engine.h  Settings.h
Core/src/: Engine.cpp
Editor/: CMakeLists.txt  index.html  main.js  package-lock.json  package.json
Editor/include/: MainApp.h  MainFrame.h
Editor/native/include/: WindowInterop.h
Editor/native/src/: WindowInterop.cpp
Editor/src/: MainApp.cpp  MainFrame.cpp
VulkanRenderer/: CMakeLists.txt
VulkanRenderer/include/: VulkanInstance.h  VulkanUtils.h
VulkanRenderer/src/: VulkanInstance.cpp
src/: main.cpp
src/App/: HelloWorld.h
